--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,13 @@
             android:text="@string/app_name"
             android:textColor="@color/white"
             android:textSize="22sp" />
+        <ImageView
+            android:id="@+id/delete_all"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/delete_all"
+            android:layout_marginStart="240dp" />
+
 
 
 
