Delete the particular note in second activity.

--- a/app/src/main/res/menu/toolbar_icons.xml
+++ b/app/src/main/res/menu/toolbar_icons.xml
@@ -6,7 +6,16 @@
         android:title=""
         app:showAsAction="always"
         android:icon="@drawable/back"/>
-
+    <item
+        android:id="@+id/schedule"
+        android:title=""
+        app:showAsAction="always"
+        android:icon="@drawable/schedule"/>
+    <item
+        android:id="@+id/delete"
+        android:title=""
+        app:showAsAction="always"
+        android:icon="@drawable/delete"/>
     <item
         android:id="@+id/save"
         android:title=""
